--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,6 @@ keywords = ["deep-learning", "pytorch", "transformers", "uv", "devcontainer"]
 
 # Minimal core dependencies - only essentials for performance
 dependencies = [
-  # Core scientific computing
-  "numpy>=1.26,<2.0",
-  "pandas>=2.0,<3.0",
-  "scipy>=1.11,<2.0",
-  # Machine learning essentials
-  "scikit-learn>=1.3,<2.0",
-  "tqdm>=4.66,<5.0",
   # Deep learning core
   "transformers>=4.42,<5.0",
   "datasets>=2.19,<3.0",
@@ -24,12 +17,19 @@ dependencies = [
   "torchvision>=0.21.0",
   "torchaudio>=2.6.0",
   "albumentations>=2.0.8",
+  # Core scientific computing
+  "numpy>=1.26,<2.0",
+  "pandas>=2.0,<3.0",
+  "scipy>=1.11,<2.0",
+  # Machine learning essentials
+  "scikit-learn>=1.3,<2.0",
+  "tqdm"
   # Tokenization
-  "sentencepiece>=0.1.99,<1.0",
+  "sentencepiece",
   # Visualization (minimal)
-  "matplotlib>=3.8,<4.0",
-  "plotly>=5.24.1",
-  "seaborn>=0.13.2",
+  "matplotlib",
+  "plotly",
+  "seaborn",
   # Jupyter minimal
   "jupyter>=1.0,<2.0",
   "ipykernel>=6.29,<7.0",
@@ -39,32 +39,25 @@ dependencies = [
   "viztracer>=0.17.1",
   # Environment management
   "python-dotenv>=1.0,<2.0",
-  "memory-profiler>=0.61.0",
-  "safety>=3.6.0",
-  "ruff>=0.12.8",
-  "mypy>=1.17.1",
-  "pytest>=8.4.1",
-  "pytest-cov>=5.0.0",
-]
-
-[project.optional-dependencies]
-# PyTorch with CUDA 13.0 support
-torch-cu130 = [
-    "torch>=2.0.0+cu130",
-    "torchvision>=0.15.0+cu130",
-    "torchaudio>=2.0.0+cu130"
+  
 ]
 
 # Development tools - minimal set
 dev = [
-  "ruff>=0.5.3,<1.0",
-  "mypy>=1.10,<2.0",
-  "pydantic>=2.9.2",
-  "pytest>=8.2,<9.0",
-  "pytest-cov>=5.0,<6.0",
-  "types-requests>=2.32,<3.0",
-  "types-PyYAML>=6.0,<7.0",
-  "pre-commit>=3.0,<4.0",
+  "ruff",
+  "mypy",
+  "pydantic",
+  "pytest",
+  "pytest-cov",
+  "types-requests",
+  "types-PyYAML",
+  "pre-commit",
+  "memory-profiler",
+  "safety",
+  "ruff",
+  "mypy",
+  "pytest",
+  "pytest-cov",
 ]
 
 # Extended data science tools (optional)
@@ -77,32 +70,32 @@ datascience = [
 
 # Notebook and lab tools (optional)
 notebook = [
-  "jupyterlab>=4.2,<5.0",
-  "ipdb>=0.13,<1.0",
-  "notebook>=7.0,<8.0",
+  "jupyterlab",
+  "ipdb",
+  "notebook",
 ]
 
 # Experiment tracking (optional)
 tracking = [
-  "tensorboard>=2.17,<3.0",
-  "wandb>=0.17,<1.0",
+  "tensorboard",
+  "wandb",
 ]
 
 # Data acquisition (optional)
 data = [
-  "kaggle>=1.6,<2.0",
+  "kaggle",
 ]
 
 # Profiling tools (optional) 
 profiling = [
-  "viztracer>=0.16,<1.0",
-  "memory-profiler>=0.61,<1.0",
+  "viztracer",
+  "memory-profiler",
 ]
 
 # Security scanning (optional)
 security = [
-  "safety>=3.0,<4.0",
-  "bandit>=1.7,<2.0",
+  "safety",
+  "bandit",
 ]
 
 [build-system]
@@ -251,21 +244,8 @@ concurrent-downloads = 10
 
 # Primary index: PyPI (default)
 [[tool.uv.index]]
-name = "safety"
-url = "https://pkgs.safetycli.com/repository/freelance-ad16e/project/ubuntu-p3-12-torch-devcontainer/pypi/simple/"
-default = false
-
-[[tool.uv.index]]
 name = "pypi"
 url = "https://pypi.org/simple"
 default = true
 
-# Secondary index: PyTorch CUDA 13.0 wheels
-[[tool.uv.index]]
-name = "pytorch-cu130"
-url = "https://download.pytorch.org/whl/cu130"
 
-# PyTorch CPU-only index (for compatibility)
-[[tool.uv.index]]
-name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/cpu"
