--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,14 +1,15 @@
 # syntax=docker/dockerfile:1.7
 
-# DEBUG VERSION - Simplified build with better error handling and logging
-FROM nvidia/cuda:13.0.0-cudnn-runtime-ubuntu24.04 AS base-debug
+# Multi-stage build for better caching and smaller final image
+# Using NVIDIA CUDA 13.0 base image with cuDNN runtime pre-installed
+FROM nvidia/cuda:13.0.0-cudnn-runtime-ubuntu24.04 AS base-deps
 
-# Build arguments
+# Build arguments for cache control
 ARG BUILDKIT_INLINE_CACHE=1
 ARG PYTHON_VERSION=3.12
 ARG TORCH_CUDA_EXTRA=torch-cu130
 
-# Environment setup with debug logging
+# Environment setup - consolidated for better layer caching
 ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
@@ -16,19 +17,14 @@ ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONHASHSEED=random \
     PIP_NO_CACHE_DIR=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    UV_INSTALL_DIR=/usr/local/bin \
     LANG=C.UTF-8 \
     LC_ALL=C.UTF-8
 
-# Add debug helper script
-RUN echo '#!/bin/bash\necho "[DEBUG] $1"\necho "Current user: $(whoami)"\necho "Current dir: $(pwd)"\necho "Environment: $*"\n' > /usr/local/bin/debug-log && \
-    chmod +x /usr/local/bin/debug-log
-
-RUN debug-log "Starting base system setup"
-
-# System dependencies with better error handling
+# System dependencies - optimized layer with cleanup
+# CUDA runtime libraries already included in base image
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    debug-log "Installing system packages" && \
     apt-get update && apt-get install -y --no-install-recommends \
     # Essential tools
     ca-certificates curl git git-lfs wget \
@@ -40,10 +36,9 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     htop iotop bc \
     # Additional utilities
     zsh sudo \
-    && debug-log "System packages installed successfully" \
+    # Cleanup in same layer
     && rm -rf /var/lib/apt/lists/* \
-    && git lfs install --system \
-    && debug-log "Git LFS configured"
+    && git lfs install --system
 
 # Set CUDA environment variables for CUDA 13.0
 ENV CUDA_HOME=/usr/local/cuda-13.0 \
@@ -52,74 +47,51 @@ ENV CUDA_HOME=/usr/local/cuda-13.0 \
     NVIDIA_VISIBLE_DEVICES=all \
     NVIDIA_DRIVER_CAPABILITIES=compute,utility
 
-RUN debug-log "CUDA environment configured" && \
-    ls -la /usr/local/ && \
-    echo "CUDA_HOME: $CUDA_HOME" && \
-    echo "PATH: $PATH"
+# Install uv
+RUN --mount=type=cache,target=/home/vscode/.cache/uv,uid=1000 \
+    curl -LsSf https://astral.sh/uv/install.sh | sh \
+    && uv --version
 
-# User setup BEFORE uv installation to avoid permission issues
+# User setup
 ARG APP_USER=vscode
 ENV HOME=/home/${APP_USER}
 
-RUN debug-log "Creating user and directories" && \
-    (groupadd --gid 1000 ${APP_USER} 2>/dev/null || echo "Group 1000 already exists, checking if it's suitable...") && \
-    (useradd --uid 1000 --gid 1000 -m ${APP_USER} 2>/dev/null || echo "User creation failed, trying alternative approach...") && \
-    if ! id ${APP_USER} &>/dev/null; then \
-    echo "Creating user with alternative method..." && \
-    useradd --uid 1001 --create-home ${APP_USER} && \
-    usermod -aG $(getent group 1000 | cut -d: -f1) ${APP_USER}; \
-    fi && \
-    mkdir -p \
-    /home/${APP_USER}/.cache/huggingface \
-    /home/${APP_USER}/.cache/torch \
-    /home/${APP_USER}/.cache/uv \
-    /home/${APP_USER}/.kaggle \
+# Create all directories in single layer
+RUN mkdir -p \
+    ${HOME}/.cache/huggingface \
+    ${HOME}/.cache/torch \
+    ${HOME}/.cache/uv \
+    ${HOME}/.kaggle \
     /workspaces/data \
-    && chown -R ${APP_USER}:${APP_USER} /home/${APP_USER} /workspaces \
-    && debug-log "User and directories created successfully"
+    && chown -R ${APP_USER}:${APP_USER} ${HOME} /workspaces
 
-# Switch to user BEFORE installing uv
+# Switch to user early
 USER ${APP_USER}
 WORKDIR /workspaces
 
-RUN debug-log "Installing uv as user ${APP_USER}"
-
-# Install uv as the user to avoid permission issues
-RUN debug-log "Installing uv for user" && \
-    curl -LsSf https://astral.sh/uv/install.sh | sh && \
-    echo 'export PATH="$HOME/.local/bin:$PATH"' >> ~/.bashrc && \
-    export PATH="$HOME/.local/bin:$PATH" && \
-    which uv && \
-    uv --version && \
-    debug-log "uv installed successfully"
+# Python environment setup stage
+FROM base-deps AS python-env
 
 # UV configuration for performance
 ENV UV_LINK_MODE=copy \
     UV_COMPILE_BYTECODE=1 \
-    UV_PYTHON_DOWNLOADS=manual \
-    PATH="/home/${APP_USER}/.local/bin:${PATH}"
+    UV_PYTHON_DOWNLOADS=manual
 
-# Install Python with debug output
-RUN debug-log "Installing Python ${PYTHON_VERSION}" && \
-    uv python install ${PYTHON_VERSION} && \
-    uv python list && \
-    debug-log "Python installation completed"
+# Install Python with cache
+RUN --mount=type=cache,target=/home/vscode/.cache/uv,uid=1000 \
+    uv python install ${PYTHON_VERSION}
+
+# Dependency installation stage
+FROM python-env AS deps-install
 
 # Copy dependency files first (better caching)
-COPY --chown=${APP_USER}:${APP_USER} pyproject.toml ./
-COPY --chown=${APP_USER}:${APP_USER} uv.lock ./
+COPY --chown=${APP_USER}:${APP_USER} pyproject.toml uv.lock ./
 
-RUN debug-log "Creating virtual environment" && \
-    uv venv --clear .venv -p ${PYTHON_VERSION} && \
-    debug-log "Virtual environment created"
-
-# Install dependencies with detailed logging
-RUN debug-log "Starting dependency installation" && \
-    . .venv/bin/activate && \
-    debug-log "Virtual environment activated" && \
-    echo "Python path: $(which python)" && \
-    echo "Python version: $(python --version)" && \
-    uv sync \
+# Create venv and install dependencies with cache mounting
+RUN --mount=type=cache,target=/home/vscode/.cache/uv,uid=1000 \
+    uv venv --clear .venv -p ${PYTHON_VERSION} \
+    && . .venv/bin/activate \
+    && uv sync \
     --no-install-project \
     --index-strategy unsafe-best-match \
     --extra dev \
@@ -127,35 +99,37 @@ RUN debug-log "Starting dependency installation" && \
     --extra ${TORCH_CUDA_EXTRA} \
     --index pytorch-cu130 \
     --compile-bytecode \
-    --verbose && \
-    debug-log "Dependencies installed successfully"
+    && echo "External dependencies installed"
 
-# Copy source code
+# Final stage - minimal layers for runtime
+FROM deps-install AS final
+
+# Copy source code (separate layer for development)
 COPY --chown=${APP_USER}:${APP_USER} . .
 
-# Install project with debug output
-RUN debug-log "Installing project in development mode" && \
-    . .venv/bin/activate && \
-    uv pip install -e . --compile-bytecode && \
-    python -m ipykernel install --user \
+# Install project and setup Jupyter kernel in single layer
+RUN . .venv/bin/activate \
+    && uv pip install -e . --compile-bytecode \
+    && python -m ipykernel install --user \
     --name torch_starter-${PYTHON_VERSION} \
-    --display-name "Python ${PYTHON_VERSION} (torch_starter)" && \
-    debug-log "Project installation completed"
+    --display-name "Python ${PYTHON_VERSION} (torch_starter)" \
+    && echo "Project setup completed"
 
-# Enhanced validation with detailed CUDA test
-RUN debug-log "Running validation tests" && \
-    . .venv/bin/activate && \
-    python -c "import sys; print(f'Python {sys.version}')" && \
-    python -c "import torch; print(f'PyTorch {torch.__version__}'); print(f'CUDA available: {torch.cuda.is_available()}'); print(f'CUDA devices: {torch.cuda.device_count()}' if torch.cuda.is_available() else 'No CUDA devices')" && \
-    python -c "import transformers; print(f'Transformers {transformers.__version__}')" && \
-    debug-log "Validation completed"
+# Enhanced validation with CUDA test
+RUN . .venv/bin/activate \
+    && python -c "import sys; print(f'Python {sys.version}')" \
+    && python -c "import torch; print(f'PyTorch {torch.__version__}')" \
+    && python -c "import transformers; print(f'Transformers {transformers.__version__}')" \
+    && python -c "import torch; print(f'CUDA available: {torch.cuda.is_available()}')" \
+    && python -c "import torch; print(f'CUDA devices: {torch.cuda.device_count()}')" \
+    || echo "Warning: Some packages may not be available or CUDA setup incomplete"
 
 # Runtime configuration
 EXPOSE 8888 8000 6006
 
-# Simple health check without CUDA requirement (since build environment may not have GPU)
+# Enhanced health check with CUDA
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD python -c "import torch; print('Health check passed')" || exit 1
+    CMD python -c "import torch; assert torch.cuda.is_available(), 'CUDA not available'" || exit 1
 
 # Optimized entrypoint
 ENTRYPOINT ["/usr/bin/tini", "--"]
@@ -163,5 +137,5 @@ CMD ["/bin/bash", "-l"]
 
 # Labels for better organization
 LABEL org.opencontainers.image.title="torch_starter"
-LABEL org.opencontainers.image.description="PyTorch development environment"
-LABEL org.opencontainers.image.version="v1"
+LABEL org.opencontainers.image.description="Optimized PyTorch development environment with CUDA support"
+LABEL org.opencontainers.image.version="2.1-cuda-fixed"
